1019_16:00 合併5位成功

--- a/PaiPaiGO/Views/HS_Get_Text/Text_Buy.cshtml
+++ b/PaiPaiGO/Views/HS_Get_Text/Text_Buy.cshtml
@@ -96,7 +96,7 @@
                         <br><br>
                         <div style="border: 1px solid #000; padding: 5px; box-sizing: border-box; overflow: auto;">
                             <textarea style="width: 100%; height: 150px; border: none;background-color: #CDF4D1;">
-                                @TempData["BuyMissionDescription"]
+                                                                                                        @TempData["BuyMissionDescription"]
                             </textarea>
                             <!-- 添加一个可以放置图片的空间 -->
                             <div style="margin-top: 10px;">
@@ -154,7 +154,7 @@
                     </div>
                     <!-- 任務金額 -->
                     <div>
-                        <img src="~/img/payments_FILL0_wght400_GRAD0_opsz24.svg" alt="">任務金額:<span>$@TempData["BuyMissionAmount"] (賺取$35)</span>
+                        <img src="~/img/payments_FILL0_wght400_GRAD0_opsz24.svg" alt="">任務金額:<span>$@TempData["BuyMissionAmount"]</span>
                     </div>
                     <!-- 配送地點 -->
                     <div>
@@ -165,6 +165,7 @@
                     </div>
                 </div>
             </div>
+            <div style="height:50px"></div>
         </div>
         <div class="col-md-1"></div>
     </div>
