--- a/PaiPaiGO/Views/HS_Get_Text/GetOrder_Pai.cshtml
+++ b/PaiPaiGO/Views/HS_Get_Text/GetOrder_Pai.cshtml
@@ -88,7 +88,7 @@
                         <br><br>
                         <div style="border: 1px solid #000; padding: 5px; box-sizing: border-box; overflow: auto;">
                             <textarea style="width: 100%; height: 150px; border: none;background-color: #CDF4D1;" readonly>
-                                @TempData["PaiMissionDescription"]
+                                                                                                            @TempData["PaiMissionDescription"]
 
             </textarea>
                             <!-- 添加一个可以放置图片的空间 -->
@@ -149,6 +149,7 @@
                     </div>
                 </div>
             </div>
+            <div style="height:50px"></div>
         </div>
         <div class="col-md-1"></div>
     </div>
