--- a/PaiPaiGO/Views/HS_Get_Text/Text_Pai.cshtml
+++ b/PaiPaiGO/Views/HS_Get_Text/Text_Pai.cshtml
@@ -96,7 +96,7 @@
                         <br><br>
                         <div style="border: 1px solid #000; padding: 5px; box-sizing: border-box; overflow: auto;">
                             <textarea style="width: 100%; height: 150px; border: none;background-color: #CDF4D1;">
-                                @TempData["PaiMissionDescription"]
+                                                                                                            @TempData["PaiMissionDescription"]
                             </textarea>
                             <!-- 添加一个可以放置图片的空间 -->
                             <div style="margin-top: 10px;">
@@ -153,7 +153,7 @@
                     </div>
                     <!-- 任務金額 -->
                     <div>
-                        <img src="~/img/payments_FILL0_wght400_GRAD0_opsz24.svg" alt="">任務金額:<span>$@TempData["PaiMissionAmount"] (賺取$35)</span>
+                        <img src="~/img/payments_FILL0_wght400_GRAD0_opsz24.svg" alt="">任務金額:<span>$@TempData["PaiMissionAmount"]</span>
                     </div>
                     <!-- 配送地點 -->
                     <div>
@@ -163,6 +163,7 @@
                     </div>
                 </div>
             </div>
+            <div style="height:50px"></div>
         </div>
         <div class="col-md-1"></div>
     </div>
